syntax = "proto3";

package todopackage;

service Todo {
    rpc createTodo (TodoItem) returns (TodoItem);
    rpc readTodos (VoidNoParam) returns (TodoItems);
}

message VoidNoParam{}

message TodoItem {
   int32 id = 1;
   string text = 2; 
}

message TodoItems {
    repeated TodoItem items = 1;
}